# agent-def-translator

./: .gitignore  .gitignore.in  .lycheeignore  .octocov.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: codeql.yml  gitignore-in.yml  linkcheck.yml  octocov.yml  pypi-publish.yml  python-test.yml  security-settings.yml
docs/: cli.md  definition-format.md  development.md  mcp-config-format.md  plugin-format.md  references.md  release.md  skill-format.md  subagent-format.md
examples/: README.md
examples/agents/: repo-explorer.toml
examples/mcp/: openai-docs.toml
examples/plugin-definitions/: hello-bundle.toml
examples/prompts/: repo-explorer.claude.md
examples/skill-definitions/: hello.toml
examples/skill-definitions/hello/: runbook.md
examples/skill-definitions/hello/references/: usage.md
examples/skill-definitions/hello/scripts/: hello.sh
examples/skills/hello/: SKILL.md
scripts/: e2e-model-live.sh  e2e-smoke.sh
src/agent_def_translator/: __init__.py  _common.py  _mcp.py  _plugin.py  _skill.py  _subagent.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py  test_e2e.py  test_examples.py  test_golden.py
tests/fixtures/agents/: repo-explorer.toml
tests/fixtures/golden/: repo-explorer.claude.md  repo-explorer.codex.toml  repo-explorer.copilot.agent.md
